# silicon-office

./: .gitignore  README.md  RUN.md  pyproject.toml  requirements.txt
src/silicon_office/common/: constants.py  ipc.py  pricing.py  schema.py
src/silicon_office/daemon/: broadcaster.py  main.py  reaper.py  registry.py  state_machine.py  udp_listener.py
src/silicon_office/emitter/: hook_emitter.py
src/silicon_office/frontend/: layout.py  main.py  net_client.py  render.py  sprites.py  theme.py  usage.py
src/silicon_office/installer/: install_hooks.py
tests/: test_installer_merge.py  test_ipc_framing.py  test_state_machine.py
tests/fixtures/: settings_json_sample.json
tools/: fake_session.py
