[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-office"
version = "0.1.0"
description = "Pygame dashboard visualizing active Claude Code sessions as avatars in a virtual office"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
frontend = ["pygame==2.6.1"]
dev = ["pytest>=8.0"]

[project.scripts]
claude-vo-daemon = "silicon_office.daemon.main:main"
claude-vo-frontend = "silicon_office.frontend.main:main"
claude-vo-emit = "silicon_office.emitter.hook_emitter:main"
claude-vo-install-hooks = "silicon_office.installer.install_hooks:main"

[tool.setuptools.packages.find]
where = ["src"]
